--- a/s2.html
+++ b/s2.html
@@ -4,7 +4,7 @@
 <head>
     
     <meta charset="utf-8">
-    <title>Команда мрії</title>
+    <title>Меню</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
